# gateway_provisioners

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  RELEASING.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/: release.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml
docs/: Makefile  doc-requirements.txt  make.bat  modules.rst  remote_provisioners.cli.rst  remote_provisioners.rst  remote_provisioners.tests.rst
docs/source/: conf.py  index.rst
docs/source/api/: gateway_provisioners.cli.rst  gateway_provisioners.rst  modules.rst
docs/source/contributors/: contrib.md  devinstall.md  index.rst  related-resources.md  sequence-diagrams.md  system-architecture.md
docs/source/developers/: custom-images.md  dev-remote-provisioner.md  index.rst  kernel-launcher.md  kernel-specification.md
docs/source/operators/: config-add-env.md  config-env-debug.md  config-file.md  config-kernel-override.md  config-security.md  config-sys-env.md  deploy-distributed.md  deploy-docker.md  deploy-kubernetes.md  deploy-yarn-cluster.md  index.rst  installing-gp-container.md  installing-gp.md  installing-kernels-container.md  installing-kernels.md  installing-rp.md
docs/source/other/: related-resources.md  troubleshooting.md
docs/source/users/: connecting-to-a-gateway.md  index.rst  kernel-envs.md
gateway_provisioners/: __init__.py  _version.py  config_mixin.py  container.py  crd.py  distributed.py  docker_swarm.py  k8s.py  remote_provisioner.py  response_manager.py  spark_operator.py  yarn.py
gateway_provisioners/app-support/: README.md
gateway_provisioners/app-support/docker/: Dockerfile  start-application.sh
gateway_provisioners/app-support/kubernetes/helm/gateway-provisioners/: Chart.yaml  values.yaml
gateway_provisioners/app-support/kubernetes/helm/gateway-provisioners/templates/: daemonset.yaml  (+10 more)
gateway_provisioners/cli/: base_app.py  docker_specapp.py  image_bootstrapapp.py  k8s_specapp.py  ssh_specapp.py  yarn_specapp.py
gateway_provisioners/docker/gp-spark-base/: Dockerfile
gateway_provisioners/docker/kernel-image/: Dockerfile
gateway_provisioners/kernel-launchers/bootstrap/: bootstrap-kernel.sh
gateway_provisioners/kernel-launchers/docker/scripts/: launch_docker.py
gateway_provisioners/kernel-launchers/kubernetes/scripts/: kernel-pod.yaml.j2  launch_kubernetes.py
gateway_provisioners/kernel-launchers/operators/scripts/: launch_custom_resource.py  sparkoperator.k8s.io-v1beta2.yaml.j2
gateway_provisioners/kernel-launchers/python/scripts/: launch_ipykernel.py  server_listener.py
gateway_provisioners/kernel-launchers/scala/toree-launcher/project/: build.properties
gateway_provisioners/kernel-launchers/shared/scripts/: server_listener.py
gateway_provisioners/kernel-specs/k8s_python_spark/: kernel.json
gateway_provisioners/kernel-specs/k8s_python_spark_operator/: kernel.json
gateway_provisioners/kernel-specs/k8s_r_spark/: kernel.json
gateway_provisioners/kernel-specs/k8s_scala_spark/: kernel.json
gateway_provisioners/kernel-specs/ssh_python/: kernel.json
gateway_provisioners/kernel-specs/ssh_scala_spark/: kernel.json
gateway_provisioners/kernel-specs/yarn_dask_python/: kernel.json
gateway_provisioners/kernel-specs/yarn_spark_python/: kernel.json
gateway_provisioners/kernel-specs/yarn_spark_scala/: kernel.json
gateway_provisioners/tests/: conftest.py  test_provider.py  test_spec_utils.py
remote_provisioners/: __init__.py  _version.py  config_mixin.py  container.py  distributed.py  docker_swarm.py  k8s.py  provisioner_base.py  remote_provisioner.py  response_manager.py  spec_utils.py  yarn.py
remote_provisioners/cli/: base_app.py  base_specapp.py  docker_specapp.py  image_bootstrapapp.py  k8s_specapp.py  ssh_specapp.py  yarn_specapp.py
remote_provisioners/docker/kernel-image/: Dockerfile
remote_provisioners/docker/rp-base/: Dockerfile  README.md
remote_provisioners/docker/rp-spark-base/: Dockerfile
remote_provisioners/docker/server-image/: Dockerfile
remote_provisioners/kernel-launchers/bootstrap/: bootstrap-kernel.sh
remote_provisioners/kernel-launchers/docker/scripts/: launch_docker.py
remote_provisioners/kernel-launchers/kubernetes/scripts/: launch_kubernetes.py
remote_provisioners/kernel-launchers/operators/scripts/: launch_custom_resource.py
remote_provisioners/kernel-launchers/python/scripts/: launch_ipykernel.py  server_listener.py
remote_provisioners/kernel-launchers/r/scripts/: gateway_listener.py  launch_IRkernel.R
remote_provisioners/kernel-launchers/scala/toree-launcher/: build.sbt
remote_provisioners/kernel-launchers/shared/scripts/: server_listener.py
remote_provisioners/kernel-specs/container_python/: kernel.json
remote_provisioners/kernel-specs/container_r/: kernel.json
remote_provisioners/kernel-specs/container_scala/: kernel.json
remote_provisioners/kernel-specs/k8s_python_spark/: kernel.json
remote_provisioners/kernel-specs/k8s_r_spark/: kernel.json
remote_provisioners/kernel-specs/k8s_scala_spark/: kernel.json
remote_provisioners/kernel-specs/ssh_python/: kernel.json
remote_provisioners/kernel-specs/ssh_python_spark/: kernel.json
remote_provisioners/kernel-specs/ssh_r/: kernel.json
remote_provisioners/kernel-specs/ssh_r_spark/: kernel.json
remote_provisioners/kernel-specs/ssh_scala/: kernel.json
remote_provisioners/kernel-specs/ssh_scala_spark/: kernel.json
remote_provisioners/kernel-specs/yarn_dask_python/: kernel.json
remote_provisioners/kernel-specs/yarn_spark_python/: kernel.json
remote_provisioners/kernel-specs/yarn_spark_r/: kernel.json
remote_provisioners/kernel-specs/yarn_spark_scala/: kernel.json
remote_provisioners/tests/: conftest.py  test_provider.py  test_spec_utils.py
tests/: conftest.py  test_docker_provisioners.py  test_k8s_provisioners.py  test_yarn_provisioners.py  utils.py  validators.py
tests/mocks/: docker_client.py  k8s_client.py  popen.py  proc.py  response_manager.py  yarn_client.py
(+2 files in other folders)
