[bdist_wheel]

[metadata]
description-file=README.md
license_file=LICENSE

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
ignore =
    # W504: Allow breaks after binary operators
    E501, W503, W504, E402
exclude =
    .cache,
    .github,
    docs,
    setup.py
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
